apps/lms/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-fe
  namespace: lms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lms-fe
  template:
    metadata:
      labels:
        app: lms-fe
    spec:
      containers:
        - image: ghcr.io/hridaya2004/lms-fe:87b7fa26b5b4c87391fde80b066b2fd42f5f5631
          name: lms-fe
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
      imagePullSecrets:
        - name: ghcr-secret
