apps/lms/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-fe
  namespace: lms
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: lms-fe
